# cinema-booking-system

./: README.md
KINO/: KINO.sln
KINO/Debug/: KINO.ilk
KINO/KINO/: Cinema.cpp  Cinema.h  Client.cpp  Client.h  KINO.vcxproj  KINO.vcxproj.filters  Movie.cpp  Movie.h  Sit.cpp  Sit.h  main.cpp
KINO/KINO/Debug/: vc142.idb
KINO/KINO/Debug/KINO.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  KINO.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cinema/: cinema.sln
cinema-booking-system/: cinema-booking-system.sln
cinema-booking-system/cinema-booking-system/: CMakeLists.txt  Cinema.cpp  Cinema.hpp  Client.cpp  Client.hpp  Movie.cpp  Movie.hpp  Sit.cpp  Sit.hpp  cinema-booking-system.cpp  cinema-booking-system.vcxproj  cinema-booking-system.vcxproj.filters
cinema-booking-system/cinema-booking-system/Debug/: vc142.idb
cinema-booking-system/cinema-booking-system/Debug/cinema-b.89EBC351.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  cinema-booking-system.lastbuildstate
cinema/Debug/: cinema.ilk
cinema/cinema/: Film.cpp  Film.h  Kino.cpp  Kino.h  Miejsce.cpp  Miejsce.h  cinema.vcxproj  cinema.vcxproj.filters  main.cpp  stdafx.cpp  Źródło.cpp
cinema/cinema/Debug/: cinema.pch  vc141.idb  vc142.idb
cinema/cinema/Debug/cinema.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  cinema.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
